argocd/base/redis/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: podinfo
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          securityContext:
            runAsnonRoot: true
            runAsUser: 999
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data

    volumeClaimTemplates:
      - metadata:
          name: redis-data
        spec:
          accessModes: ["ReadWriteOnce"]
          storageClassName: "gp3"
          resources:
            requests:
              storage: 1Gi
---
# internal service (clusterIP)

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: podinfo
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
